all updates from SVN

--- a/app/barbican.html
+++ b/app/barbican.html
@@ -40,7 +40,7 @@
           <div class="row">
             <div class="logo col-xs-6">
               <a href="index.html" title="Pitney Bowes logo"></a>
-              <span class="hidden-xs cat-title">Location Intelligence</span>
+              <span class="hidden-xs product-cat-title">Location Intelligence</span>
             </div>
             <nav class="col-xs-6">
               <ul>
@@ -59,7 +59,7 @@
       <div class="main-content">
         <div class="hero-wrapper darkbg">
           <div class="container-fluid hero">
-            <div class="hidden-xs type-cat border white pos">
+            <div class="hidden-xs format-industry-title border white pos">
               <a href="#">Case Study</a>
               <a href="#" class="last">Retail</a>
             </div>
@@ -70,22 +70,22 @@
               </div>
             </div>
             <div class="row social-container light">
-                <ul class="col-xs-12">
-                  <li class="facebook"><a href="#"></a></li>
-                  <li class="twitter"><a href="#"></a></li>
-                  <li class="linkedin"><a href="#"></a></li>
-                  <li class="email"><a href="#"></a></li>
-                  <li class="download border-left"><a href="#"></a></li>
+                <ul class="col-xs-12 social">
+                  <li class="icn-fb"><a href="#"></a></li>
+                  <li class="icn-tw"><a href="#"></a></li>
+                  <li class="icn-in"><a href="#"></a></li>
+                  <li class="icn-email"><a href="#"></a></li>
+                  <li class="icn-dl border-left"><a href="#"></a></li>
                 </ul>
             </div><!--/.row-->
           </div><!--/.hero-->
         </div><!--.hero-wrapper-->
-        <div class="top-benefits container-fluid">
+        <div class="container-fluid summary">
           <div class="row">
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <p class="col-sm-8 col-sm-offset-2">The Risk Data Suite automated processes that were previously complex. Look-ups and location-based analyses of postcodes can now be carried out in seconds.</p>
-            </div>
+            <p class="col-sm-10 col-sm-offset-1">The Risk Data Suite automated processes that were previously complex. Look-ups and location-based analyses of postcodes can now be carried out in seconds.</p>
           </div>
+        </div>
+        <div class="top-benefits container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
               <div class="benefit col-sm-4 col-xs-12">
@@ -109,12 +109,12 @@
             </div>
           </div>
         </div>
-        <div class="tech-used content-overflows container-fluid">
+        <div class="tech-used container-fluid">
           <div class="col-xs-12">
             <div class="border">
               <div class="row first-row">
                 <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-                  <div class="title-bg-detail"><h2>Technology Used</h2></div>
+                  <h2 class="copy-section-title">Technology Used</h2>
                 </div>
               </div>
               <div class="row"><!-- second row - 2 options -->
@@ -143,7 +143,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Executive Summary</h2></div>
+              <h2 class="copy-section-title">Executive Summary</h2>
               <div class="quote">
                 <blockquote class="copy">"We looked at the traditional modelling companies, but weren’t comfortable with how they calculated their results. It was only with PBS that we felt we’d found a company that understood our requirements and could deliver an operational system."</blockquote>
                 <p class="small bold">David Horan,</p>
@@ -158,7 +158,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Business Challenge</h2></div>
+              <h2 class="copy-section-title">Business Challenge</h2>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">Barbican Insurance wanted to make faster and more accurate underwriting decisions based on location and demographic data. By providing a better understanding of the level of exposure attached to specific postcodes, it wanted to help its customers minimise their risk and more accurately manage their claims and reinsurance costs.</p>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">As a relatively new company unencumbered by legacy systems, Barbican wanted an integrated solution that combined data on perils such as flooding, subsidence and crime with precise postcode information. This level of integration is surprisingly rare within the UK industry; insurance professionals still perform time-consuming manual look-ups on paper-based records or spreadsheets. Even with the advent of online tools such as Google Maps, there is a lack of systemic integration between location-based demographics and specific on-the-ground data such as postcodes. Barbican wanted a solution that both automated and sped up these processes.</p>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">PBS liaised extensively with Barbican to establish the exact functionality required and how they wanted to be able to use the system. The ability to search and view multiple levels of peril information associated with every postcode in the UK was a priority. PBS suggested that integrating this data with mapping </p>
@@ -168,7 +168,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-xs-offset-0 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Solution</h2></div>
+              <h2 class="copy-section-title">Solution</h2>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">To meet Barbican’s requirements, PBS developed the Risk Data Suite, a new product for the insurance industry that is specifically designed to assist underwriting decisions, improve risk awareness and highlight exposure. By combining geospatial datasets and historical information on a variety of perils – including flood, subsidence, crime and arson – with the ability to analyse this data via PBS’s MapInfo Professional™ location intelligence and mapping software, the Risk Data Suite provides Barbican with an integrated, location-specific view of potential risk.</p>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">The Risk Data Suite enables Barbican to make sophisticated underwriting decisions based on the actual conditions as well as the historical precedents that exist in any given location. By integrating geographic information with risk datasets and frontending it with an easy-to-use interface, the Risk Data Suite allows postcode-specific scenarios and analyses to be run quickly and simply. Barbican can identify exposure hotspots in precise locations, and drill down for more information just by clicking on the highlighted areas on the onscreen map. Access to vital risk data empowers
                 Barbican to make important decisions and to retain control.</p>
@@ -179,7 +179,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Results and Benefits</h2></div>
+              <h2 class="copy-section-title">Results and Benefits</h2>
               <div class="quote">
                 <blockquote class="copy">"The Risk Data Suite enables us to provide a much slicker service to brokers. It’s incredibly powerful to be able to deliver that level of insight and enable decisions to be made at the first point of contact."</blockquote>
                 <p class="small bold">David Horan,</p>
@@ -193,12 +193,12 @@
           </div>
           <div class="row social-container">
             <p class="share-copy col-sm-2 col-sm-offset-5">Share This</p>
-            <ul class="col-xs-12">
-              <li class="facebook"><a href="#"></a></li>
-              <li class="twitter"><a href="#"></a></li>
-              <li class="linkedin"><a href="#"></a></li>
-              <li class="email"><a href="#"></a></li>
-              <li class="download border-left"><a href="#"></a></li>
+            <ul class="col-xs-12 social">
+              <li class="icn-fb"><a href="#"></a></li>
+              <li class="icn-tw"><a href="#"></a></li>
+              <li class="icn-in"><a href="#"></a></li>
+              <li class="icn-email"><a href="#"></a></li>
+              <li class="icn-dl border-left"><a href="#"></a></li>
             </ul>
           </div><!--/.row-->
         </div><!-- copy-section -->
@@ -206,19 +206,25 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-                <div class="title-bg-detail"><h2>More on Location Intelligence</h2></div>
+                <h2 class="copy-section-title">More on Location Intelligence</h2>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#">Case Study</a>
-                    <a href="#">Retail</a>
+                    <div class="col-xs-12 format-industry-title border pos">
+                      <a href="#case-study">case study</a>
+                      <a href="#retail" class="last">retail</a>
+                    </div>
                     <p>Barbian Insurance uses location and demographic data to improve risk evaluation</p>
                 </div>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#">Case Study</a>
-                    <a href="#">Finance</a>
+                    <div class="col-xs-12 format-industry-title border pos">
+                      <a href="#case-study">case study</a>
+                      <a href="#retail" class="last">finance</a>
+                    </div>
                     <p>Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
                 </div>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#">Article</a>
+                    <div class="col-xs-12 format-industry-title border pos">
+                      <a href="#article" class="last">Article</a>
+                    </div>
                     <p>Using knowledge graphs to unlock consumer data</p>
                 </div>
               </div>
@@ -266,12 +272,16 @@
                 <li><a href="#">Compliance Information</a></li>
               </ul>
             </div>
-            <div class="col-sm-2 col-xs-12 social">
+            <div class="col-sm-2 col-xs-12">
               <h2>Follow Us</h2>
-              <a href="#" class="icn-fb-dark"></a>
-              <a href="#" class="icn-tw-dark"></a>
-              <a href="#" class="icn-in-dark"></a>
-              <a href="#" class="icn-yt-dark"></a>
+              <div class="row social-container">
+                <ul class="col-xs-12 social">
+                  <li class="icn-fb"><a href="#"></a></li>
+                  <li class="icn-tw"><a href="#"></a></li>
+                  <li class="icn-in"><a href="#"></a></li>
+                  <li class="icn-yt"><a href="#"></a></li>
+                </ul>
+              </div><!--/.row-->
             </div>
           </div><!--/.row-->
           <div class="row">
