--- a/app/content/category-content.html
+++ b/app/content/category-content.html
@@ -23,7 +23,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="module col1-halfbg example1">
-                <div class="col-xs-12 type-cat border pos">
+                <div class="col-xs-12 format-industry-title border pos">
                   <a href="#case-study">case study</a>
                   <a href="#retail" class="last">retail</a>
                 </div>
@@ -35,9 +35,9 @@
                     </div><!--/.vertical-wrap-->
                   </div><!--/.table-->
                 </div></a><!--/.col-xs-12.col-sm-->
-                <div class="col-xs-12 cat-techlinks">
+                <div class="col-xs-12 product-links">
                   <span class="link-title">Technology Used:</span> <div class="links"><a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></div>
-                </div><!--/.cat-techlinks-->
+                </div><!--/.product-links-->
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
                   <div class="table">
                     <div class="vertical-wrap">
@@ -58,7 +58,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="module col1-fullbg darkbg">
-                <div class="col-xs-12 type-cat border pos">
+                <div class="col-xs-12 format-industry-title border pos">
                   <a href="#case-study">case study</a>
                   <a href="#finance" class="last">finance</a>
                 </div>
@@ -72,9 +72,9 @@
                     </div>
                   </div><!--/.vertical-wrap-->
                 </div></a><!--/.table-->
-                <div class="col-xs-12 cat-techlinks">
+                <div class="col-xs-12 product-links">
                   <span class="link-title">Technology Used:</span> <div class="links"><a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></div>
-                </div><!--/.cat-techlinks-->
+                </div><!--/.product-links-->
               </div><!--/.module-->
             </div><!--/.row-->
           </div><!--/.container-fluid-->
@@ -83,7 +83,7 @@
             <div class="row">
               <div class="module col2 left halfheight">
                 <div class="col-xs-12">
-                  <div class="col-xs-12 type-cat border white pos">
+                  <div class="col-xs-12 format-industry-title border white pos">
                     <a href="#">article</a>
                     <a href="#" class="last">finance</a>
                   </div>
@@ -98,7 +98,7 @@
                 </div>
               </div><!--/.module.col2-->
               <div class="module col2 right">
-                  <div class="col-xs-12 type-cat border pos">
+                  <div class="col-xs-12 format-industry-title border pos">
                     <a href="#">blog post</a>
                     <a href="#" class="last">pb software blogs</a>
                   </div>
@@ -118,7 +118,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="module col1-halfbg example1">
-                <div class="col-xs-12 type-cat border pos">
+                <div class="col-xs-12 format-industry-title border pos">
                   <a href="#case-study">case study</a>
                   <a href="#retail" class="last">retail</a>
                 </div>
@@ -130,9 +130,9 @@
                     </div><!--/.vertical-wrap-->
                   </div><!--/.table-->
                 </div></a><!--/.col-xs-12.col-sm-->
-                <div class="col-xs-12 cat-techlinks promo">
+                <div class="col-xs-12 product-links promo">
                   <span class="link-title">Technology Used:</span> <div class="links"><a href="#">MapInfo Professional 12.5</a> <span class="blue-box"><a href="#">Download Free Trial</a></span> <a href="#" class="read-more">. . .</a></div>
-                </div><!--/.cat-techlinks-->
+                </div><!--/.product-links-->
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
                   <div class="table">
                     <div class="vertical-wrap">
@@ -157,7 +157,7 @@
                   <div id=""></div>
                 </div>
                 <span class="hidden-video-content">
-                  <div class="col-xs-12 type-cat border pos">
+                  <div class="col-xs-12 format-industry-title border pos">
                     <a href="#case-study">case study</a>
                     <a href="#finance" class="last">finance</a>
                   </div>
@@ -169,9 +169,9 @@
                       </div>
                     </div><!--/.vertical-wrap-->
                   </div></a><!--/.table-->
-                  <div class="col-xs-12 cat-techlinks">
+                  <div class="col-xs-12 product-links">
                     <span class="link-title">Technology Used:</span> <div class="links"><a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></div>
-                  </div><!--/.cat-techlinks-->
+                  </div><!--/.product-links-->
               </span>
               </div><!--/.module-->
             </div><!--/.row-->
@@ -180,7 +180,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="module col1-halfbg example2">
-                <div class="col-xs-12 type-cat border pos">
+                <div class="col-xs-12 format-industry-title border pos">
                   <a href="#case-study">case study</a>
                   <a href="#retail" class="last">retail</a>
                 </div>
@@ -192,14 +192,14 @@
                     </div><!--/.vertical-wrap-->
                   </div><!--/.table-->
                 </div></a><!--/.col-xs-12.col-sm-->
-                <div class="col-xs-12 cat-techlinks">
+                <div class="col-xs-12 product-links">
                   <span class="link-title">Technology Used:</span>
                   <div class="links">
                     <a href="#">MapInfo Professional</a>
                     <a href="#">MapInfo Drivetime</a>
                     <a href="#" class="read-more">. . .</a>
                   </div>
-                </div><!--/.cat-techlinks-->
+                </div><!--/.product-links-->
                 <div class="video-container video-half hide col-sm-6 bg col-xs-12 vert" data-video-id="xXBaFcm_7BM">
                   <div id=""></div>
                 </div>
@@ -222,7 +222,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="module col1-halfbg example2">
-                <div class="col-xs-12 type-cat border pos">
+                <div class="col-xs-12 format-industry-title border pos">
                   <a href="#case-study">case study</a>
                   <a href="#retail" class="last">retail</a>
                 </div>
@@ -234,9 +234,9 @@
                     </div><!--/.vertical-wrap
                   </div><!--/.table
                 </div></a><!--/.col-xs-12.col-sm
-                <div class="col-xs-12 cat-techlinks">
+                <div class="col-xs-12 product-links">
                   <p><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
-                </div><!--/.cat-techlinks
+                </div><!--/.product-links
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert mobil-video-image-example">
                   <img class="video-bg-img visible-xs" src="images/category-template/desktop/col2-bg-fullwidth4.jpg" />
                   <div class="table">
@@ -253,7 +253,7 @@
               <div class="row">
                 <div class="module col2 left bgexample1 darkbg">
                   <div class="col-xs-12">
-                    <div class="col-xs-12 type-cat border pos">
+                    <div class="col-xs-12 format-industry-title border pos">
                       <a href="#">case study</a>
                       <a href="#" class="last">finance</a>
                     </div>
@@ -266,9 +266,9 @@
                       </div>
                     </div><!--/.vertical-wrap-->
                   </div></a><!--/.table-->
-                  <div class="col-xs-12 cat-techlinks">
+                  <div class="col-xs-12 product-links">
                     <p><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
-                  </div><!--/.cat-techlinks-->
+                  </div><!--/.product-links-->
                 </div><!--/.module.col2-->
                 <a href="#"><div class="module col2 darkbg right bgexample2">
                     <div class="col2-content pos bottom left">
@@ -285,7 +285,7 @@
               <div class="row">
                 <div class="module col2 left halfheight">
                   <div class="col-xs-12">
-                    <div class="col-xs-12 type-cat border white pos">
+                    <div class="col-xs-12 format-industry-title border white pos">
                       <a href="#case-study">case study</a>
                     </div>
                     <a href="#">
@@ -316,7 +316,7 @@
                   </div>
                   <span class="hidden-video-content">
                     <div class="col-xs-12">
-                      <div class="col-xs-12 type-cat border white pos">
+                      <div class="col-xs-12 format-industry-title border white pos">
                         <a href="#case-study">case study</a>
                       </div>
                       <a href="#">
@@ -336,7 +336,7 @@
                       <div id=""></div>
                     </div>
                     <span class="hidden-video-content">
-                      <div class="col-xs-12 type-cat border white pos">
+                      <div class="col-xs-12 format-industry-title border white pos">
                         <a href="#case-study">case study</a>
                         <a href="#finance" class="last">finance</a>
                       </div>
@@ -348,9 +348,9 @@
                           </div>
                         </div><!--/.vertical-wrap-->
                       </div></a><!--/.table-->
-                      <div class="col-xs-12 cat-techlinks">
+                      <div class="col-xs-12 product-links">
                         <p class=""><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
-                      </div><!--/.cat-techlinks-->
+                      </div><!--/.product-links-->
                     </span>
                 </div><!--/.module.col2-->
 
