--- a/app/nationwide.html
+++ b/app/nationwide.html
@@ -40,7 +40,7 @@
           <div class="row">
             <div class="logo col-xs-6">
               <a href="index.html" title="Pitney Bowes logo"></a>
-              <span class="hidden-xs cat-title">Location Intelligence</span>
+              <span class="hidden-xs product-cat-title">Location Intelligence</span>
             </div>
             <nav class="col-xs-6">
               <ul>
@@ -59,7 +59,7 @@
       <div class="main-content">
         <div class="hero-wrapper darkbg">
           <div class="container-fluid hero">
-            <div class="hidden-xs type-cat border white pos">
+            <div class="hidden-xs format-industry-title border white pos">
               <a href="#">Case Study</a>
               <a href="#" class="last">Banking</a>
             </div>
@@ -71,21 +71,21 @@
             </div>
             <div class="row social-container light">
                 <ul class="col-xs-12">
-                  <li class="facebook"><a href="#"></a></li>
-                  <li class="twitter"><a href="#"></a></li>
-                  <li class="linkedin"><a href="#"></a></li>
-                  <li class="email"><a href="#"></a></li>
-                  <li class="download border-left"><a href="#"></a></li>
+                  <li class="icn-fb"><a href="#"></a></li>
+                  <li class="icn-tw"><a href="#"></a></li>
+                  <li class="icn-in"><a href="#"></a></li>
+                  <li class="icn-email"><a href="#"></a></li>
+                  <li class="icn-dl border-left"><a href="#"></a></li>
                 </ul>
             </div><!--/.row-->
           </div><!--/.hero-->
         </div><!--.hero-wrapper-->
-        <div class="top-benefits container-fluid">
+        <div class="container-fluid summary">
           <div class="row">
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <p class="col-sm-8 col-sm-offset-2">Portrait solutions maximized cross selling opportunities and customer satisfaction increased because of the relevant sales prompts provided to employees.</p>
-            </div>
+            <p class="col-sm-10 col-sm-offset-1">Portrait solutions maximized cross selling opportunities and customer satisfaction increased because of the relevant sales prompts provided to employees.</p>
           </div>
+        </div>
+        <div class="top-benefits container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
               <div class="benefit col-sm-4 col-xs-12">
@@ -109,12 +109,12 @@
             </div>
           </div>
         </div>
-        <div class="tech-used content-overflows container-fluid">
+        <div class="tech-used container-fluid">
           <div class="col-xs-12">
             <div class="border">
               <div class="row first-row">
                 <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-                  <div class="title-bg-detail"><h2>Technology Used</h2></div>
+                  <h2 class="copy-section-title">Technology Used</h2>
                 </div>
               </div>
               <div class="row"><!-- 1 options -->
@@ -137,7 +137,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Executive Summary</h2></div>
+              <h2 class="copy-section-title">Executive Summary</h2>
               <div class="quote">
                 <blockquote class="copy">“With Portrait we can treat all 11 million customers as individuals, and are well placed to better meet their needs and thus do more business with more people for longer than we did before.”</blockquote>
                 <p class="small bold">Simon Baines</p>
@@ -151,7 +151,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Business Challenge</h2></div>
+              <h2 class="copy-section-title">Business Challenge</h2>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">As a mutual organization in a largely homogenous market, Nationwide knew that the key to increasing its market share was to deliver a highly personalized service that offered its members long-term value. The company lacked tools for employees to be able to treat customers as individuals.</p>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">Nationwide, with the help of Pitney Bowes, aimed to equip employees with the specific means to deliver a vastly improved customer experience. </p>
             </div>
@@ -160,7 +160,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-xs-offset-0 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Project Description and Solution</h2></div>
+              <h2 class="copy-section-title">Project Description and Solution</h2>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">Partnering with Pitney Bowes Software, Nationwide planned to optimize the value of customer interactions by developing the single view of each customer. This would include details of each interaction and intelligent, actionable prompts to help employees make the most of each customer interaction.</p>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">The single customer view is delivered by integrating with the Nationwide CRM system – its highly configurable, process centric approach was to model and support the processes that drive Nationwide’s customer interactions and deploy them efficiently and consistently across all channels. Portrait allows all of Nationwide’s customer data to stay where it naturally lives, with the real-time ‘single view’ generated when needed.</p>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">As a result Nationwide’s customer personal data is now highly accurate, it has improved the value of each customer by maximizing cross-selling opportunities and, at the same time, customer satisfaction has been raised because sales prompts are relevant.</p>
@@ -171,7 +171,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Results and Benefits</h2></div>
+              <h2 class="copy-section-title">Results and Benefits</h2>
               <div class="quote">
                 <blockquote class="copy">“Portrait Prompts help us to sell more through inbound service conversations than we do through traditional outbound direct marketing.”</blockquote>
                 <p class="small bold">Simon Baines</p>
@@ -184,12 +184,12 @@
           </div>
           <div class="row social-container">
             <p class="share-copy col-sm-2 col-sm-offset-5">Share This</p>
-            <ul class="col-xs-12">
-              <li class="facebook"><a href="#"></a></li>
-              <li class="twitter"><a href="#"></a></li>
-              <li class="linkedin"><a href="#"></a></li>
-              <li class="email"><a href="#"></a></li>
-              <li class="download border-left"><a href="#"></a></li>
+            <ul class="col-xs-12 social">
+              <li class="icn-fb"><a href="#"></a></li>
+              <li class="icn-tw"><a href="#"></a></li>
+              <li class="icn-in"><a href="#"></a></li>
+              <li class="icn-email"><a href="#"></a></li>
+              <li class="icn-dl border-left"><a href="#"></a></li>
             </ul>
           </div><!--/.row-->
         </div><!-- copy-section -->
@@ -197,19 +197,25 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-                <div class="title-bg-detail"><h2></h2></div>
+                <h2 class="copy-section-title"></h2>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#">Case Study</a>
-                    <a href="#">Retail</a>
+                    <div class="col-xs-12 format-industry-title border pos">
+                      <a href="#case-study">case study</a>
+                      <a href="#retail" class="last">retail</a>
+                    </div>
                     <p>Barbian Insurance uses location and demographic data to improve risk evaluation</p>
                 </div>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#">Case Study</a>
-                    <a href="#">Finance</a>
+                    <div class="col-xs-12 format-industry-title border pos">
+                      <a href="#case-study">case study</a>
+                      <a href="#finance" class="last">finance</a>
+                    </div>
                     <p>Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
                 </div>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#">Article</a>
+                    <div class="col-xs-12 format-industry-title border pos">
+                      <a href="#article" class="last">Article</a>
+                    </div>
                     <p>Using knowledge graphs to unlock consumer data</p>
                 </div>
               </div>
@@ -257,12 +263,16 @@
                 <li><a href="#">Compliance Information</a></li>
               </ul>
             </div>
-            <div class="col-sm-2 col-xs-12 social">
+            <div class="col-sm-2 col-xs-12">
               <h2>Follow Us</h2>
-              <a href="#" class="icn-fb-dark"></a>
-              <a href="#" class="icn-tw-dark"></a>
-              <a href="#" class="icn-in-dark"></a>
-              <a href="#" class="icn-yt-dark"></a>
+              <div class="row social-container">
+                <ul class="col-xs-12 social">
+                  <li class="icn-fb"><a href="#"></a></li>
+                  <li class="icn-tw"><a href="#"></a></li>
+                  <li class="icn-in"><a href="#"></a></li>
+                  <li class="icn-yt"><a href="#"></a></li>
+                </ul>
+              </div><!--/.row-->
             </div>
           </div><!--/.row-->
           <div class="row">
