--- a/app/category.html
+++ b/app/category.html
@@ -40,7 +40,7 @@
           <div class="row">
             <div class="logo col-xs-6">
               <a href="index.html" title="Pitney Bowes logo"></a>
-              <span class="hidden-xs cat-title">Location Intelligence</span>
+              <span class="hidden-xs product-cat-title">Location Intelligence</span>
             </div>
             <nav class="col-xs-6">
               <ul>
@@ -80,21 +80,21 @@
           <div class="container-fluid">
             <div class="row">
               <div class="module col1-halfbg example1">
-                <div class="col-xs-12 type-cat border pos">
+                <div class="col-xs-12 format-industry-title border pos">
                   <a href="#case-study">case study</a>
                   <a href="#retail" class="last">retail</a>
                 </div>
                 <a href="#"><div class="col-sm-6 col-xs-12 vert left">
                   <div class="table">
                     <div class="vertical-wrap">
-                      <h3 class="big">1 The best drive time data for sales forecasting</h3>
+                      <h3 class="big">The best drive time data for sales forecasting</h3>
                       <p class="hidden-xs"><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
                     </div><!--/.vertical-wrap-->
                   </div><!--/.table-->
                 </div></a><!--/.col-xs-12.col-sm-->
-                <div class="col-xs-12 cat-techlinks">
+                <div class="col-xs-12 product-links">
                   <span class="link-title">Technology Used:</span> <div class="links"><a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></div>
-                </div><!--/.cat-techlinks-->
+                </div><!--/.product-links-->
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
                   <div class="table">
                     <div class="vertical-wrap">
@@ -115,23 +115,23 @@
           <div class="container-fluid">
             <div class="row">
               <div class="module col1-fullbg darkbg">
-                <div class="col-xs-12 type-cat border pos">
+                <div class="col-xs-12 format-industry-title border pos">
                   <a href="#case-study">case study</a>
                   <a href="#finance" class="last">finance</a>
                 </div>
                 <a href="#"><div class="table">
                   <div class="vertical-wrap">
                     <div class="col-sm-8 col-xs-11">
-                      <h3 class=""><i>2 90% of all documents are now using electronic signature. Speeding up processing of requests as well as cost savings</i></h3>
+                      <h3 class=""><i>90% of all documents are now using electronic signature. Speeding up processing of requests as well as cost savings</i></h3>
                     </div><!--/.col-xs-12.col-sm-8-->
                     <div class="col-sm-8 col-xs-11">
                       <p class=" hidden-xs"><i>Bank J. Van Breda</i> gets digital messaging, goes paperless and implements electronic signatures</p>
                     </div>
                   </div><!--/.vertical-wrap-->
                 </div></a><!--/.table-->
-                <div class="col-xs-12 cat-techlinks">
+                <div class="col-xs-12 product-links">
                   <span class="link-title">Technology Used:</span> <div class="links"><a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></div>
-                </div><!--/.cat-techlinks-->
+                </div><!--/.product-links-->
               </div><!--/.module-->
             </div><!--/.row-->
           </div><!--/.container-fluid-->
@@ -140,14 +140,14 @@
             <div class="row">
               <div class="module col2 left halfheight">
                 <div class="col-xs-12">
-                  <div class="col-xs-12 type-cat border white pos">
+                  <div class="col-xs-12 format-industry-title border white pos">
                     <a href="#">article</a>
                     <a href="#" class="last">finance</a>
                   </div>
                   <a href="#">
                     <div class="halfheight-bg example1 hidden-xs"></div>
                     <div class="col2-content half">
-                      <h3>3 Using knowledge graphs to unlock consumer data</h3>
+                      <h3>Using knowledge graphs to unlock consumer data</h3>
                       <p>How knowledge graphs can help businesses better mine their data...</p>
                     </div>
                     <div class="halfheight-bg visible-xs example1"></div>
@@ -155,7 +155,7 @@
                 </div>
               </div><!--/.module.col2-->
               <div class="module col2 right">
-                  <div class="col-xs-12 type-cat border pos">
+                  <div class="col-xs-12 format-industry-title border pos">
                     <a href="#">blog post</a>
                     <a href="#" class="last">pb software blogs</a>
                   </div>
@@ -175,25 +175,25 @@
           <div class="container-fluid">
             <div class="row">
               <div class="module col1-halfbg example1">
-                <div class="col-xs-12 type-cat border pos">
+                <div class="col-xs-12 format-industry-title border pos">
                   <a href="#case-study">case study</a>
                   <a href="#retail" class="last">retail</a>
                 </div>
                 <a href="#"><div class="col-sm-6 col-xs-12 vert left">
                   <div class="table">
                     <div class="vertical-wrap">
-                      <h3 class="big">5 The best drive time data for sales forecasting</h3>
+                      <h3 class="big">The best drive time data for sales forecasting</h3>
                       <p class="hidden-xs"><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
                     </div><!--/.vertical-wrap-->
                   </div><!--/.table-->
                 </div></a><!--/.col-xs-12.col-sm-->
-                <div class="col-xs-12 cat-techlinks promo">
+                <div class="col-xs-12 product-links promo">
                   <span class="link-title">Technology Used:</span> <div class="links"><a href="#">MapInfo Professional 12.5</a> <span class="blue-box"><a href="#">Download Free Trial</a></span> <a href="#" class="read-more">. . .</a></div>
-                </div><!--/.cat-techlinks-->
+                </div><!--/.product-links-->
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
                   <div class="table">
                     <div class="vertical-wrap">
-                      <blockquote>"6 We no longer have to justify our drive time calculations and the dealers have full confidence in the intelligence we supply to them."
+                      <blockquote>"We no longer have to justify our drive time calculations and the dealers have full confidence in the intelligence we supply to them."
                         <span class="quote-cite">
                         <strong>Andrew Bury,</strong><br>
                         Network Planning Manager,<br>
@@ -213,7 +213,7 @@
                 <div class="video-container video-full hide" data-video-id="tjaPnFVc_aw">
                 </div>
                 <span class="hidden-video-content">
-                  <div class="col-xs-12 type-cat border pos">
+                  <div class="col-xs-12 format-industry-title border pos">
                     <a href="#case-study">case study</a>
                     <a href="#finance" class="last">finance</a>
                   </div>
@@ -221,13 +221,13 @@
                     <div class="vertical-wrap">
                       <img src="images/sprite/icn-play-circle.png" class="video-play" />
                       <div class="col-sm-8 col-xs-11">
-                        <p><i>8 Bank J. Van Breda</i> gets digital messaging, goes paperless and implements electronic signatures</p>
+                        <p><i>Bank J. Van Breda</i> gets digital messaging, goes paperless and implements electronic signatures</p>
                       </div>
                     </div><!--/.vertical-wrap-->
                   </div></a><!--/.table-->
-                  <div class="col-xs-12 cat-techlinks">
+                  <div class="col-xs-12 product-links">
                     <span class="link-title">Technology Used:</span> <div class="links"><a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></div>
-                  </div><!--/.cat-techlinks-->
+                  </div><!--/.product-links-->
               </span>
               </div><!--/.module-->
             </div><!--/.row-->
@@ -236,26 +236,26 @@
           <div class="container-fluid">
             <div class="row">
               <div class="module col1-halfbg example2">
-                <div class="col-xs-12 type-cat border pos">
+                <div class="col-xs-12 format-industry-title border pos">
                   <a href="#case-study">case study</a>
                   <a href="#retail" class="last">retail</a>
                 </div>
                 <a href="#"><div class="col-sm-6 col-xs-12 vert left">
                   <div class="table">
                     <div class="vertical-wrap">
-                      <h3 class="big">7 The best drive time data for sales forecasting</h3>
+                      <h3 class="big">The best drive time data for sales forecasting</h3>
                       <p class="hidden-xs"><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
                     </div><!--/.vertical-wrap-->
                   </div><!--/.table-->
                 </div></a><!--/.col-xs-12.col-sm-->
-                <div class="col-xs-12 cat-techlinks">
+                <div class="col-xs-12 product-links">
                   <span class="link-title">Technology Used:</span>
                   <div class="links">
                     <a href="#">MapInfo Professional</a>
                     <a href="#">MapInfo Drivetime</a>
                     <a href="#" class="read-more">. . .</a>
                   </div>
-                </div><!--/.cat-techlinks-->
+                </div><!--/.product-links-->
                 <div class="video-container video-half hide col-sm-6 bg col-xs-12 vert" data-video-id="xXBaFcm_7BM">
                 </div>
                 <span class="hidden-video-content">
@@ -271,44 +271,11 @@
             </div><!--/.row-->
           </div><!--/.container-fluid-->
 
-          <!-- duplicate of above module with img tag insted of bg for mobile -->
-
-          <!--
           <div class="container-fluid">
-            <div class="row">
-              <div class="module col1-halfbg example2">
-                <div class="col-xs-12 type-cat border pos">
-                  <a href="#case-study">case study</a>
-                  <a href="#retail" class="last">retail</a>
-                </div>
-                <a href="#"><div class="col-sm-6 col-xs-12 vert left">
-                  <div class="table">
-                    <div class="vertical-wrap">
-                      <h3 class="big">7.2 The best drive time data for sales forecasting</h3>
-                      <p class="hidden-xs"><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
-                    </div><!--/.vertical-wrap
-                  </div><!--/.table
-                </div></a><!--/.col-xs-12.col-sm
-                <div class="col-xs-12 cat-techlinks">
-                  <p><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
-                </div><!--/.cat-techlinks
-                <a href="#"><div class="col-sm-6 bg col-xs-12 vert mobil-video-image-example">
-                  <img class="video-bg-img visible-xs" src="images/category-template/desktop/col2-bg-fullwidth4.jpg" />
-                  <div class="table">
-                    <div class="vertical-wrap">
-                      <img src="images/sprite/icn-play-circle.png" class="video-play" />
-                    </div><!--/.vertical-wrap
-                  </div><!--/.table
-                </div></a><!--/.col-xs-12.col-sm-6
-              </div><!--/.module
-            </div><!--/.row-
-          </div><!--/.container-fluid-->
-
-            <div class="container-fluid">
               <div class="row">
                 <div class="module col2 left bgexample1 darkbg">
                   <div class="col-xs-12">
-                    <div class="col-xs-12 type-cat border pos">
+                    <div class="col-xs-12 format-industry-title border pos">
                       <a href="#">case study</a>
                       <a href="#" class="last">finance</a>
                     </div>
@@ -316,18 +283,18 @@
                   <a href="#"><div class="table">
                     <div class="vertical-wrap">
                       <div class="col2-content">
-                        <h3 class=""><i>9 90% of all documents are now using electronic signature. Speeding up processing of requests as well as cost savings</i></h3>
+                        <h3 class=""><i>90% of all documents are now using electronic signature. Speeding up processing of requests as well as cost savings</i></h3>
                         <p class="hidden-xs">Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
                       </div>
                     </div><!--/.vertical-wrap-->
                   </div></a><!--/.table-->
-                  <div class="col-xs-12 cat-techlinks">
+                  <div class="col-xs-12 product-links">
                     <p><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
-                  </div><!--/.cat-techlinks-->
+                  </div><!--/.product-links-->
                 </div><!--/.module.col2-->
                 <a href="#"><div class="module col2 darkbg right bgexample2">
                     <div class="col2-content pos bottom left">
-                      <h3><i>10 MapInfo Professional 12.5</i></h3>
+                      <h3><i>MapInfo Professional 12.5</i></h3>
                       <p class="small">The power to visualize and analyze geographical information</p>
                       <p class="uppercase"><span class="icn-dl"></span>download the free trial now</p>
                     </div>
@@ -340,13 +307,13 @@
               <div class="row">
                 <div class="module col2 left halfheight">
                   <div class="col-xs-12">
-                    <div class="col-xs-12 type-cat border white pos">
+                    <div class="col-xs-12 format-industry-title border white pos">
                       <a href="#case-study">case study</a>
                     </div>
                     <a href="#">
                     <div class="halfheight-bg example2"></div>
                     <div class="col2-content half">
-                      <h3>11 The best drive time data for sales forecasting</h3>
+                      <h3>The best drive time data for sales forecasting</h3>
                       <p><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
                     </div></a>
                   </div>
@@ -370,7 +337,7 @@
                   </div>
                   <span class="hidden-video-content">
                     <div class="col-xs-12">
-                      <div class="col-xs-12 type-cat border white pos">
+                      <div class="col-xs-12 format-industry-title border white pos">
                         <a href="#case-study">case study</a>
                       </div>
                       <a href="#">
@@ -378,7 +345,7 @@
                         <img src="images/sprite/icn-play-sm.png" class="video-play" />
                       </div>
                       <div class="col2-content half">
-                        <h3>12 The best drive time data for sales forecasting</h3>
+                        <h3>The best drive time data for sales forecasting</h3>
                         <p><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
                       </div></a>
                     </div>
@@ -389,7 +356,7 @@
                     <div class="video-container video-full hide" data-video-id="XouclG_puWs">
                     </div>
                     <span class="hidden-video-content">
-                      <div class="col-xs-12 type-cat border white pos">
+                      <div class="col-xs-12 format-industry-title border white pos">
                         <a href="#case-study">case study</a>
                         <a href="#finance" class="last">finance</a>
                       </div>
@@ -401,9 +368,9 @@
                           </div>
                         </div><!--/.vertical-wrap-->
                       </div></a><!--/.table-->
-                      <div class="col-xs-12 cat-techlinks">
+                      <div class="col-xs-12 product-links">
                         <p class=""><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
-                      </div><!--/.cat-techlinks-->
+                      </div><!--/.product-links-->
                     </span>
                 </div><!--/.module.col2-->
 
@@ -457,12 +424,16 @@
                 <li><a href="#">Compliance Information</a></li>
               </ul>
             </div>
-            <div class="col-sm-2 col-xs-12 social">
+            <div class="col-sm-2 col-xs-12">
               <h2>Follow Us</h2>
-              <a href="#" class="icn-fb-dark"></a>
-              <a href="#" class="icn-tw-dark"></a>
-              <a href="#" class="icn-in-dark"></a>
-              <a href="#" class="icn-yt-dark"></a>
+              <div class="row social-container">
+                <ul class="col-xs-12 social">
+                  <li class="icn-fb"><a href="#"></a></li>
+                  <li class="icn-tw"><a href="#"></a></li>
+                  <li class="icn-in"><a href="#"></a></li>
+                  <li class="icn-yt"><a href="#"></a></li>
+                </ul>
+              </div><!--/.row-->
             </div>
           </div><!--/.row-->
           <div class="row">
