--- a/app/long-form-content-empty.html
+++ b/app/long-form-content-empty.html
@@ -40,7 +40,7 @@
           <div class="row">
             <div class="logo col-xs-6">
               <a href="index.html" title="Pitney Bowes logo"></a>
-              <span class="hidden-xs cat-title">Long Form Content Template</span>
+              <span class="hidden-xs product-cat-title">Long Form Content Template</span>
             </div>
             <nav class="col-xs-6">
               <ul>
@@ -59,7 +59,7 @@
       <div class="main-content">
         <div class="hero-wrapper darkbg">
           <div class="container-fluid hero">
-            <div class="hidden-xs type-cat border white pos">
+            <div class="hidden-xs format-industry-title border white pos">
               <a href="#">Case Study</a>
               <a href="#" class="last">Retail</a>
             </div>
@@ -80,12 +80,12 @@
             </div><!--/.row-->
           </div><!--/.hero-->
         </div><!--.hero-wrapper-->
-        <div class="top-benefits container-fluid">
+        <div class="container-fluid summary">
           <div class="row">
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <p class="col-sm-8 col-sm-offset-2"></p>
-            </div>
+            <p class="col-sm-10 col-sm-offset-1"></p>
           </div>
+        </div>
+        <div class="top-benefits container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
               <div class="benefit col-sm-4 col-xs-12">
@@ -109,12 +109,12 @@
             </div>
           </div>
         </div>
-        <div class="tech-used content-overflows container-fluid">
+        <div class="tech-used container-fluid">
           <div class="col-xs-12">
             <div class="border">
               <div class="row first-row">
                 <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-                  <div class="title-bg-detail"><h2></h2></div>
+                  <h2 class="copy-section-title"></h2>
                 </div>
               </div>
               <div class="row">
@@ -171,7 +171,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Executive Summary</h2></div>
+              <h2 class="copy-section-title">Executive Summary</h2>
               <div class="quote">
                 <blockquote class="copy">""</blockquote>
                 <p class="small bold"></p>
@@ -186,7 +186,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2></h2></div>
+              <h2 class="copy-section-title"></h2>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
@@ -197,7 +197,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-xs-offset-0 col-sm-offset-1">
-              <div class="title-bg-detail"><h2></h2></div>
+              <h2 class="copy-section-title"></h2>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
@@ -208,7 +208,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2></h2></div>
+              <h2 class="copy-section-title"></h2>
               <div class="quote">
                 <blockquote class="copy">""</blockquote>
                 <p class="small bold"></p>
@@ -235,7 +235,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-                <div class="title-bg-detail"><h2></h2></div>
+                <h2 class="copy-section-title"></h2>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
                     <a href="#"></a>
                     <a href="#"></a>
@@ -295,12 +295,16 @@
                 <li><a href="#">Compliance Information</a></li>
               </ul>
             </div>
-            <div class="col-sm-2 col-xs-12 social">
+            <div class="col-sm-2 col-xs-12">
               <h2>Follow Us</h2>
-              <a href="#" class="icn-fb-dark"></a>
-              <a href="#" class="icn-tw-dark"></a>
-              <a href="#" class="icn-in-dark"></a>
-              <a href="#" class="icn-yt-dark"></a>
+              <div class="row social-container">
+                <ul class="col-xs-12 social">
+                  <li class="icn-fb"><a href="#"></a></li>
+                  <li class="icn-tw"><a href="#"></a></li>
+                  <li class="icn-in"><a href="#"></a></li>
+                  <li class="icn-yt"><a href="#"></a></li>
+                </ul>
+              </div><!--/.row-->
             </div>
           </div><!--/.row-->
           <div class="row">
