--- a/app/peugeot.html
+++ b/app/peugeot.html
@@ -40,7 +40,7 @@
           <div class="row">
             <div class="logo col-xs-6">
               <a href="index.html" title="Pitney Bowes logo"></a>
-              <span class="cat-title hidden-xs">Location Intelligence</span>
+              <span class="product-cat-title hidden-xs">Location Intelligence</span>
             </div>
             <nav class="col-xs-6">
               <ul>
@@ -59,7 +59,7 @@
       <div class="main-content">
         <div class="hero-wrapper darkbg">
           <div class="container-fluid hero">
-            <div class="hidden-xs type-cat border white pos">
+            <div class="hidden-xs format-industry-title border white pos">
               <a href="#">Case Study</a>
               <a href="#" class="last">Retail</a>
             </div>
@@ -72,21 +72,21 @@
             </div>
             <div class="row social-container light">
                 <ul class="col-xs-12">
-                  <li class="facebook"><a href="#"></a></li>
-                  <li class="twitter"><a href="#"></a></li>
-                  <li class="linkedin"><a href="#"></a></li>
-                  <li class="email"><a href="#"></a></li>
-                  <li class="download border-left"><a href="#"></a></li>
+                  <li class="icn-fb"><a href="#"></a></li>
+                  <li class="icn-tw"><a href="#"></a></li>
+                  <li class="icn-in"><a href="#"></a></li>
+                  <li class="icn-email"><a href="#"></a></li>
+                  <li class="icn-dl border-left"><a href="#"></a></li>
                 </ul>
             </div><!--/.row-->
           </div><!--/.hero-->
         </div><!--.hero-wrapper-->
-        <div class="top-benefits container-fluid">
+        <div class="container-fluid summary">
           <div class="row">
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <p class="col-sm-8 col-sm-offset-2">Peugeot used data from millions of  real world car trips to calculate average journey time undertaken by users of  TomTom 7 days a week between 7 am and 7 pm</p>
-            </div>
+            <p class="col-sm-10 col-sm-offset-1">Peugeot used data from millions of  real world car trips to calculate average journey time undertaken by users of  TomTom 7 days a week between 7 am and 7 pm</p>
           </div>
+        </div>
+        <div class="top-benefits container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
               <div class="benefit col-sm-4 col-xs-12">
@@ -110,12 +110,12 @@
             </div>
           </div>
         </div>
-        <div class="tech-used content-overflows container-fluid">
+        <div class="tech-used container-fluid">
           <div class="col-xs-12">
             <div class="border">
               <div class="row first-row">
                 <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-                  <div class="title-bg-detail"><h2>Technology Used</h2></div>
+                  <h2 class="copy-section-title">Technology Used</h2>
                 </div>
               </div>
               <div class="row">
@@ -170,7 +170,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Executive Summary</h2></div>
+              <h2 class="copy-section-title">Executive Summary</h2>
               <div class="quote">
                 <blockquote class="copy">"As a network planning manager this has made a big difference to my role. We no longer have to justify our drive time calculations and the dealers have full confidence in the intelligence we supply to them."</blockquote>
                 <p class="small bold">Andrew Bury,</p>
@@ -185,7 +185,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Business Challenge</h2></div>
+              <h2 class="copy-section-title">Business Challenge</h2>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">PCA needed to improve the accuracy of its drive time profiles to make more informed decisions related to network planning.</p>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">A reliance on generic drive time data – which calculates the time it takes to complete a specific road journey based purely on distance and speed limit – led to a lack of confidence in the underlying data and consequently on the reliability of the projections. For example, dealers would often query their stated catchment boundaries, as a journey estimated to take 30 minutes would in reality be much quicker or slower due to local road conditions and traffic trends.</p>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">This lack of insight made it difficult to set accurate sales performance targets for individual sites as it needed to know the total industry volume and existing vehicle parc figures (the number of potential customers for new cars and after service care within each area). It therefore wanted access to the most accurate journey information and to be able to combine it with industry data in order to calculate the true sales potential of each of its existing service centres and showrooms.</p>
@@ -196,7 +196,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-xs-offset-0 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Solution</h2></div>
+              <h2 class="copy-section-title">Solution</h2>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">PCA implemented a bespoke version of MapInfo Drivetime combined with TomTom Speed Profile data to understand the overall accessibility by car of each of its showrooms and service centres within their standard opening hours.</p>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">The software automatically calculates average journey times derived from millions of real world car journeys undertaken by users of TomTom sat nav systems 7 days a week between the hours of 7am and 7pm.</p>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">This data is then displayed in MapInfo Professional, Pitney Bowes Software’s sophisticated visualisation and analysis tool where it is overlaid with other sources of demographic data to reveal further insight. For example, each service centre’s assigned territory can be matched against a DVLA database to set sales targets according to the number of Peugeot or Citroën cars between one and seven years old that are registered within that catchment. While each showroom’s performance can be measured against industry data and assessed according to the number of competing dealers in its area and its share of total new car sales within each postcode sector.</p>
@@ -207,7 +207,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Results and Benefits</h2></div>
+              <h2 class="copy-section-title">Results and Benefits</h2>
               <div class="quote">
                 <blockquote class="copy">"The extra intelligence this gives us is invaluable while the solution itself is extremely cost effective. There’s no denying that these tools provide us with excellent value for money."</blockquote>
                 <p class="small bold">Andrew Bury,</p>
@@ -221,12 +221,12 @@
           </div>
           <div class="row social-container">
             <p class="share-copy col-sm-2 col-sm-offset-5">Share This</p>
-            <ul class="col-xs-12">
-              <li class="facebook"><a href="#"></a></li>
-              <li class="twitter"><a href="#"></a></li>
-              <li class="linkedin"><a href="#"></a></li>
-              <li class="email"><a href="#"></a></li>
-              <li class="download border-left"><a href="#"></a></li>
+            <ul class="col-xs-12 social">
+              <li class="icn-fb"><a href="#"></a></li>
+              <li class="icn-tw"><a href="#"></a></li>
+              <li class="icn-in"><a href="#"></a></li>
+              <li class="icn-email"><a href="#"></a></li>
+              <li class="icn-dl border-left"><a href="#"></a></li>
             </ul>
           </div><!--/.row-->
         </div><!-- copy-section -->
@@ -234,19 +234,25 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-                <div class="title-bg-detail"><h2>More on Location Intelligence</h2></div>
+                <h2 class="copy-section-title">More on Location Intelligence</h2>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#">Case Study</a>
-                    <a href="#">Retail</a>
+                    <div class="col-xs-12 format-industry-title border pos">
+                      <a href="#case-study">case study</a>
+                      <a href="#retail" class="last">retail</a>
+                    </div>
                     <p>Barbian Insurance uses location and demographic data to improve risk evaluation</p>
                 </div>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#">Case Study</a>
-                    <a href="#">Finance</a>
+                    <div class="col-xs-12 format-industry-title border pos">
+                      <a href="#case-study">case study</a>
+                      <a href="" class="last">finance</a>
+                    </div>
                     <p>Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
                 </div>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#">Article</a>
+                    <div class="col-xs-12 format-industry-title border pos">
+                      <a href="" class="last">Article</a>
+                    </div>
                     <p>Using knowledge graphs to unlock consumer data</p>
                 </div>
               </div>
@@ -294,12 +300,16 @@
                 <li><a href="#">Compliance Information</a></li>
               </ul>
             </div>
-            <div class="col-sm-2 col-xs-12 social">
+            <div class="col-sm-2 col-xs-12">
               <h2>Follow Us</h2>
-              <a href="#" class="icn-fb-dark"></a>
-              <a href="#" class="icn-tw-dark"></a>
-              <a href="#" class="icn-in-dark"></a>
-              <a href="#" class="icn-yt-dark"></a>
+              <div class="row social-container">
+                <ul class="col-xs-12 social">
+                  <li class="icn-fb"><a href="#"></a></li>
+                  <li class="icn-tw"><a href="#"></a></li>
+                  <li class="icn-in"><a href="#"></a></li>
+                  <li class="icn-yt"><a href="#"></a></li>
+                </ul>
+              </div><!--/.row-->
             </div>
           </div><!--/.row-->
           <div class="row">
