--- a/app/schwan.html
+++ b/app/schwan.html
@@ -40,7 +40,7 @@
           <div class="row">
             <div class="logo col-xs-6">
               <a href="index.html" title="Pitney Bowes logo"></a>
-              <span class="hidden-xs cat-title">Location Intelligence</span>
+              <span class="hidden-xs product-cat-title">Location Intelligence</span>
             </div>
             <nav class="col-xs-6">
               <ul>
@@ -59,7 +59,7 @@
       <div class="main-content">
         <div class="hero-wrapper">
           <div class="container-fluid hero">
-            <div class="hidden-xs type-cat border pos">
+            <div class="hidden-xs format-industry-title border pos">
               <a href="#">Case Study</a>
               <a href="#" class="last">Retail</a>
             </div>
@@ -70,22 +70,22 @@
               </div>
             </div>
             <div class="row social-container">
-                <ul class="col-xs-12">
-                  <li class="facebook"><a href="#"></a></li>
-                  <li class="twitter"><a href="#"></a></li>
-                  <li class="linkedin"><a href="#"></a></li>
-                  <li class="email"><a href="#"></a></li>
-                  <li class="download border-left"><a href="#"></a></li>
+                <ul class="col-xs-12 social">
+                  <li class="icn-fb"><a href="#"></a></li>
+                  <li class="icn-tw"><a href="#"></a></li>
+                  <li class="icn-in"><a href="#"></a></li>
+                  <li class="icn-email"><a href="#"></a></li>
+                  <li class="icn-dl border-left"><a href="#"></a></li>
                 </ul>
             </div><!--/.row-->
           </div><!--/.hero-->
         </div><!--.hero-wrapper-->
-        <div class="top-benefits container-fluid">
+        <div class="container-fluid summary">
           <div class="row">
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <p class="col-sm-8 col-sm-offset-2">Pitney Bowes technology seamlessly integrates with Schwan’s Home Service’s web store, call center application and the handheld devices used in the field.</p>
-            </div>
+            <p class="col-sm-10 col-sm-offset-1">Pitney Bowes technology seamlessly integrates with Schwan’s Home Service’s web store, call center application and the handheld devices used in the field.</p>
           </div>
+        </div>
+        <div class="top-benefits container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
               <div class="benefit col-sm-4 col-xs-12">
@@ -109,12 +109,12 @@
             </div>
           </div>
         </div>
-        <div class="tech-used content-overflows container-fluid">
+        <div class="tech-used container-fluid">
           <div class="col-xs-12">
             <div class="border">
               <div class="row first-row">
                 <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-                  <div class="title-bg-detail"><h2>Technology Used</h2></div>
+                  <h2 class="copy-section-title">Technology Used</h2>
                 </div>
               </div>
               <div class="row"><!-- 1 option -->
@@ -137,7 +137,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Executive Summary</h2></div>
+              <h2 class="copy-section-title">Executive Summary</h2>
               <div class="quote">
                 <blockquote class="copy">"Consolidate customer information from disparate data sources for master data management, analytics and business intelligence."</blockquote>
                 <p class="small bold">Connie Gugel,</p>
@@ -152,7 +152,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Business Challenge</h2></div>
+              <h2 class="copy-section-title">Business Challenge</h2>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">A potential home delivery customer registering for an account at Schwans.com or through the call center would be assigned a customer number. Meanwhile, the local depot would be alerted to schedule service for the potential customer. A Customer Service Manager(CSM) would then visit the customer and re-enter their information into a handheld device used to collect sales orders, deliveries and track inventory.</p>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">This disconnect between customer touch points resulted in the creation of two separate records for the same customer, which led to missed sales, overlapping delivery cycles, duplicate mailings, and ultimately, customer dissatisfaction. The company needed a comprehensive data quality solution to help improve customer service and depot efficiency.</p>
             </div>
@@ -161,7 +161,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-xs-offset-0 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Solution</h2></div>
+              <h2 class="copy-section-title">Solution</h2>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">The Pitney Bowes Spectrum Technology Platform seamlessly integrates with Schwan’s Home Service’s web store, call center application and the handheld devices used by Customer Service Managers (CSMs) in the field. When the web store registers a new
                 customer, the data quality solution standardizes the address and attempts to match it to an existing customer record—thereby preventing the creation of duplicate records.</p>
               <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">Customer address validation and standardization is performed in real-time while new addresses are being entered into the system. Addresses that are not able to be validated or standardized in real-time are automatically submitted for the daily address scrubbing process. While in the field, CSM handheld devices run in a disconnected mode, uploading customer data at the end of each day to corporate headquarters.</p>
@@ -171,7 +171,7 @@
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Results and Benefits</h2></div>
+              <h2 class="copy-section-title">Results and Benefits</h2>
               <div class="quote">
                 <blockquote class="copy">"After we implemented the Pitney Bowes Spectrum Enterprise Data Quality Solution customer matching module, we saw a 25 percent reduction in the number of new customers being created by the handhelds."</blockquote>
                 <p class="small bold">Connie Gugel,</p>
@@ -188,32 +188,39 @@
           </div>
           <div class="row social-container">
             <p class="share-copy col-sm-2 col-sm-offset-5">Share This</p>
-            <ul class="col-xs-12">
-              <li class="facebook"><a href="#"></a></li>
-              <li class="twitter"><a href="#"></a></li>
-              <li class="linkedin"><a href="#"></a></li>
-              <li class="email"><a href="#"></a></li>
-              <li class="download border-left"><a href="#"></a></li>
+            <ul class="col-xs-12 social">
+              <li class="icn-fb"><a href="#"></a></li>
+              <li class="icn-tw"><a href="#"></a></li>
+              <li class="icn-in"><a href="#"></a></li>
+              <li class="icn-email"><a href="#"></a></li>
+              <li class="icn-dl border-left"><a href="#"></a></li>
             </ul>
           </div><!--/.row-->
         </div><!-- copy-section -->
         <div class="more-section">
           <div class="container-fluid">
+
             <div class="row">
               <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-                <div class="title-bg-detail"><h2></h2></div>
+                <h2 class="copy-section-title"></h2>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#">Case Study</a>
-                    <a href="#">Retail</a>
+                    <div class="col-xs-12 format-industry-title border pos">
+                      <a href="#case-study">case study</a>
+                      <a href="#retail" class="last">retail</a>
+                    </div>
                     <p>Barbian Insurance uses location and demographic data to improve risk evaluation</p>
                 </div>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#">Case Study</a>
-                    <a href="#">Finance</a>
+                    <div class="col-xs-12 format-industry-title border pos">
+                      <a href="#case-study">case study</a>
+                      <a href="#retail" class="last">finance</a>
+                    </div>
                     <p>Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
                 </div>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#">Article</a>
+                    <div class="col-xs-12 format-industry-title border pos">
+                      <a href="#case-study" class="last">article</a>
+                    </div>
                     <p>Using knowledge graphs to unlock consumer data</p>
                 </div>
               </div>
@@ -261,12 +268,16 @@
                 <li><a href="#">Compliance Information</a></li>
               </ul>
             </div>
-            <div class="col-sm-2 col-xs-12 social">
+            <div class="col-sm-2 col-xs-12">
               <h2>Follow Us</h2>
-              <a href="#" class="icn-fb-dark"></a>
-              <a href="#" class="icn-tw-dark"></a>
-              <a href="#" class="icn-in-dark"></a>
-              <a href="#" class="icn-yt-dark"></a>
+              <div class="row social-container">
+                <ul class="col-xs-12 social">
+                  <li class="icn-fb"><a href="#"></a></li>
+                  <li class="icn-tw"><a href="#"></a></li>
+                  <li class="icn-in"><a href="#"></a></li>
+                  <li class="icn-yt"><a href="#"></a></li>
+                </ul>
+              </div><!--/.row-->
             </div>
           </div><!--/.row-->
           <div class="row">
